--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
             <div class="task-info">
               <div class="task-title">
-                <a href="https://www.youtube.com/@nurunnisatia7342"><h4>TUGAS VIDEO PRESENTASI DAN INSTALASI OS UBUNTU - Youtube</h4></a>
+                <a href="https://youtu.be/R9pYm-cmA_0"><h4>Pengertian, sejarah, jenis-jenis dan Instalasi Linux Ubuntu pada Virtual Box</h4></a>
               </div>
-              <p>Membuat video presentasi mengenai OS Ubuntu serta langkah-langkah instalasinya. Video ini dibuat untuk memenuhi tugas Mata Kuliah Sistem Terdistribusi</p>
+              <p>Penjelasan tentang apa itu ubuntu, sejarah ubuntu, jenis-jenis ubuntu, antarmuka pengguna, paket dan repositori, terminal pada ubuntu serta tentang instalasi ubuntu pada perangkat keras.Untuk memenuhi salah satu tugas mata kuliah Sistem Terdistribusi.</p>
             </div>
           </div>
           <!--Tugas 2-->
