--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <!--Tugas 1-->
           <div class="task">
             <div class="task-cover">
-              <img src="img/youtube.png" alt="tugas1" />
+              <img src="ubuntu-logo.jpg" alt="tugas1" />
             </div>
 
             <div class="task-info">
